<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serializer_pkg</name>
  <version>0.0.0</version>
  <description>ROS 2 package for serialization in rclpy and rclcpp. Available for sensor_msgs (Image, CameraInfo) and stereo_msgs (DisparityImage)</description>
  <maintainer email="alejandra.mf23be@gmail.com">amf</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>stereo_msgs</build_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>stereo_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
